# Harmony-TSC

./: .gitignore  CMakeLists.txt  README.md  docker_scheduler_agent_RK3588
agent/server/: flask_openai_server.py  image_agent.py  start_image_agent.sh  start_server.sh
agent/tools/: README.md  cluster_resources_mcp.py  mcp_server.py  vision_execute_tool.py
config_files/: multi_agent_info.json  static_info.json
multi-agent/ascend_server/: README.md  agent_tools.py  ascend_common.sh  image_agent.py  image_agent.sh  main_agent.py  main_agent.sh  segmentation_agent.py  segmentation_agent.sh  text_agent.py  text_agent.sh
multi-agent/rk_server/: agent_tools.py  image_agent.py  image_agent.sh  main_agent.py  main_agent.sh  segmentation_agent.py  segmentation_agent.sh  text_agent.py  text_agent.sh
multi-agent/server/: agent_tools.py  image_agent.py  main_agent.py  main_agent.sh  segmentation_agent.py  segmentation_agent.sh  text_agent.py  text_agent.sh
multi-agent/tools/: cluster_resource_tool.py  mcp_server.py  start_sub_agent_tool.py  task_catalog_tool.py  vision_execute_tool.py
muti-agent/: agent_tools.py  image_agent.py  main_agent.py
src/custom_struct/: CMakeLists.txt
src/custom_struct/ThreadSafeMap/: CMakeLists.txt  Map.cpp  Map.h  ThreadSafeMap.cpp  ThreadSafeMap.h
src/custom_struct/device_struct/: CMakeLists.txt  device.cpp  device.h
src/docker_client/: CMakeLists.txt  DockerClient.cpp  DockerClient.h
src/docker_scheduler_agent/: CMakeLists.txt  MachineInfoCollectorBase.cpp  MachineInfoCollectorBase.h  device_type.h.in  main.cpp
src/docker_scheduler_agent/arch/atlas200/: MachineInfoCollector.cpp  MachineInfoCollector.h  dsmi_common_interface.h
src/docker_scheduler_agent/arch/rk3588/: MachineInfoCollector.cpp  MachineInfoCollector.h
src/docker_scheduler_agent/arch/unknown/: MachineInfoCollector.cpp  MachineInfoCollector.h
src/gateway/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  SocketServer.cpp  SocketServer.h  main.cpp
src/scheduler/: CMakeLists.txt  main.cpp  scheduler.cpp  scheduler.h
src/time_tools/: CMakeLists.txt  TimeCallback.h  TimeRecorder.h
src/z3_test/: CMakeLists.txt  z3Test.cpp  z3_schedule.cpp
tests/docker_client/: CMakeLists.txt  docker_client_test.cpp
tests/gateway/: CMakeLists.txt  gateway_test.cpp
tests/z3_mock_test/: CMakeLists.txt  mock_data.json  z3_mock_test.cpp
